# EngineSimulator

./: CMakeLists.txt
cmake/: CMakeLists.txt  CMakelists.txt
cmake/engine_lib/: CMakeLists.txt  EngineModel.hpp
cmake/engine_lib/entity/: EngineWorkingMode.hpp  InternalCombucstionEngine.cpp  InternalCombucstionEngine.hpp  InternalCombucstionEngineData.hpp
cmake/engine_lib/interfaces/: AEngine.hpp  AEngineData.hpp
cmake/engine_lib_tests/: CMakeLists.txt
cmake/engine_lib_tests/entity/: EngineTestStand.cpp  EngineTestStand.hpp  InternalCombucstionEngineDataSerializer.cpp  InternalCombucstionEngineDataSerializer.hpp
cmake/engine_lib_tests/entity/serializer/: InternalCombucstionEngineDataSerializer.hpp
cmake/engine_lib_tests/interfaces/: AEngineDataSerializer.hpp  AEngineTestStand.hpp  ATestStand.hpp
cmake/src/: CMakeLists.txt  EngineTestStand.cpp  EngineTestStand.hpp  main.cpp
engine_lib/: CMakeLists.txt
engine_lib/entity/: EngineType.hpp  InternalCombucstionEngine.cpp  InternalCombucstionEngine.hpp  InternalCombucstionEngineData.cpp  InternalCombucstionEngineData.hpp
engine_lib/interfaces/: AEngine.hpp  AEngineData.hpp
engine_lib_tests/: CMakeLists.txt  EngineTestType.hpp
engine_lib_tests/entity/: EngineTestStand.cpp  EngineTestStand.hpp
engine_lib_tests/entity/serializer/: InternalCombucstionEngineDataSerializer.cpp  InternalCombucstionEngineDataSerializer.hpp
engine_lib_tests/interfaces/: AEngineDataSerializer.hpp  AEngineTestStand.hpp
engine_lib_tests/test_data/: Read.json  Write.json
src/: CMakeLists.txt  main.cpp
